[gd_scene load_steps=6 format=3 uid="uid://diip0moewltt2"]

[ext_resource type="PackedScene" uid="uid://dn53i4p8n4gw4" path="res://CardHand.tscn" id="1_lw3im"]
[ext_resource type="PackedScene" uid="uid://5fbpe2hg2h5f" path="res://pebble_hand.tscn" id="1_ra02d"]
[ext_resource type="Texture2D" uid="uid://n5qxpodq0a0b" path="res://pixil-frame-0(9).png" id="3_owm80"]
[ext_resource type="Script" path="res://Change.gd" id="4_mvwwy"]
[ext_resource type="PackedScene" uid="uid://bgrthyn4f0syc" path="res://enemy_view.tscn" id="5_vyae0"]

[node name="Main" type="Node2D"]

[node name="PebbleHand" parent="." instance=ExtResource("1_ra02d")]
visible = false

[node name="CardHand" parent="." instance=ExtResource("1_lw3im")]

[node name="Change" type="Sprite2D" parent="."]
position = Vector2(1088, 596)
scale = Vector2(5, 5)
texture = ExtResource("3_owm80")
script = ExtResource("4_mvwwy")

[node name="EnemyView" parent="." instance=ExtResource("5_vyae0")]
position = Vector2(589, 161)
